test/programs/error-captures-1-level.defs
(def (capture ($x ..) ($y ..))
  (result ($x $y) ..))